# code-review-rotation

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: all-review-rotations.yml  single-sheet-devs-rotation.yml  single-sheet-teams-rotation.yml  tests.yml  web-tests.yml
.husky/: pre-commit
lib/: config_loader.py
scripts/: README.md  check_scheduled_rotation_needed.py  rotate_devs_reviewers.py  rotate_team_reviewers.py  run_multi_sheet_rotation.py
tests/: test_config_default_usage.py  test_devs_rotation.py  test_teams_rotation.py
web/: .env.example  .gitignore  QA_REPORT.md  README.md  TEST_STRATEGY.md  TODO.md  components.json  drizzle.config.ts  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  wrangler.jsonc
web/app/: app.vue  error.vue
web/app/components/: ConfirmDialog.vue  EmailInput.vue  EmptyState.vue  ErrorBanner.vue  PageHeader.vue  PasswordInput.vue  SearchInput.vue  SegmentControl.vue  StatusBadge.vue  SuccessBanner.vue  TrimText.vue
web/app/composables/: useConfirm.ts
web/app/layouts/: auth.vue  default.vue
web/app/lib/: utils.ts
web/app/middleware/: auth.global.ts
web/app/pages/: all-schedules.vue  api-keys.vue  confirm.vue  forgot-password.vue  index.vue  login.vue  me.vue  register.vue  reset-password.vue  settings.vue
web/app/types/: index.ts
web/app/utils/: constants.ts  error.ts  formatting.ts
web/tests/: api-key.test.ts  email.test.ts  error.test.ts  formatting.test.ts  webhook.test.ts
(+226 files in other folders)
