[tool.poetry]
name = "allocate_reviewers"
version = "0.2.0"
description = ""
authors = ["1uy31"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
gspread = "^5.3.2"
oauth2client = "^4.1.3"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11"
mypy = "^0.982"
pytest = ">=7.1.3,<10.0.0"
freezegun = "^1.2.2"
coverage = "^6.4.4"
refurb = "^1.5.0"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["lib", "scripts"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
max-line-length = 100
